--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
             font-size: 40px;
         }
 
+        /* footer */
+
+        
+
     </style>
     <body>
         <header>
@@ -93,5 +97,8 @@
                 <p class="texto-chamativo" style="text-align: center;">Assista agora <a href="#"><i class="bi bi-play-circle"></i></a></p>
             </div>
         </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
