--- a/index.html
+++ b/index.html
@@ -74,7 +74,66 @@
             font-size: 40px;
         }
 
-        /* footer */
+        footer {
+            background-color: #1c1c1c;
+            color: #fff;
+            padding: 40px 0;
+            text-align: center;
+            font-size: 14px;
+        }
+
+        footer .footer-logo-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+
+        footer .footer-logo {
+            font-size: 30px;
+            font-weight: 700;
+            color: #00b14f;
+            margin-right: 10px;
+        }
+
+      
+
+        footer .social-icons a {
+            color: #fff;
+            font-size: 20px;
+            margin: 0 10px;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        footer .social-icons a:hover {
+            color: #00b14f;
+        }
+
+        footer .links {
+            margin: 20px 0;
+        }
+
+        footer .links a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 16px;
+            transition: color 0.3s ease;
+        }
+        .logo{
+        width: 90px;
+        }
+
+        footer .links a:hover {
+            color: #00b14f;
+        }
+
+        footer .copy {
+            margin-top: 20px;
+            font-size: 12px;
+            color: #888;
+        }
 
         
 
@@ -98,7 +157,25 @@
             </div>
         </main>
         <footer>
-
+            <div class="footer-logo-container">
+                <img class="logo" src="/WhatsApp_Image_2024-12-10_at_11.27.49-removebg-preview.png" alt="Logo AquaPulse"> <!-- Substitua pelo caminho da sua logo -->
+                <div class="footer-logo">AquaPulse</div>
+            </div>
+            <div class="social-icons">
+                <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
+                <a href="#" target="_blank"><i class="bi bi-twitter"></i></a>
+                <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
+                <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
+            </div>
+            <div class="links">
+                <a href="#">Sobre</a>
+                <a href="#">Serviço</a>
+                <a href="#">Contato</a>
+                <a href="#">Política de Privacidade</a>
+            </div>
+            <div class="copy">
+                © 2024 AquaPulse. Todos os direitos reservados.
+            </div>
         </footer>
     </body>
 </html>
