--- a/osmar.html
+++ b/osmar.html
@@ -95,11 +95,19 @@
         #sobre-produto {
             background-color: #0D0D0D;
             height: 100vh;
-            width: 100%;
             display: flex;
+            align-items: center;
             /* margin: 10px; */
             /* padding: 5px; */
             flex-direction: row;
+        }
+
+        #box-titulo-sobre-produto {
+            border: 1px solid green;
+            height: 20vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;;
         }
 
         #titulo-sobre-produto {
@@ -107,13 +115,15 @@
             font-weight: 400;
             font-style: normal;
             color: #fff;
-            font-size: 35px;
+            font-size: 55px;
+            margin-left: 45px;
         }
 
         .fotos-sobre-produto {
-            width: 10vw;
-            height: 80vh;
+            width: 90vw;
+            height: 90vh;
             border: 1px solid white;
+            margin: 5px;
         }
 
         /* footer */
@@ -141,24 +151,25 @@
         </main>
         <section id="sobre-produto">
             <div class="fotos-sobre-produto">
-                <h2 id="titulo-sobre-produto">Sobre o Produto</h2>
-                <img src="/image.png" alt="image 01" >
+                <div id="box-titulo-sobre-produto"><h2 id="titulo-sobre-produto">Sobre o Produto</h2></div>
+                <div id="box-coluna1-linha2"></div>
+                <div id="box-coluna1-linha3"></div>
             </div>
 
             <div class="fotos-sobre-produto">
-                <img src="/image.png" alt="image 02" >
+                <img src="" alt="image 02" >
             </div>
 
             <div class="fotos-sobre-produto">
-                <img src="/image.png" alt="image 03" >
+                <img src="" alt="image 03" >
             </div>
 
             <div class="fotos-sobre-produto">
-                <img src="/image.png" alt="image 04" >
+                <img src="" alt="image 04" >
             </div>
 
             <div class="fotos-sobre-produto">
-                <img src="/image.png" alt="image 05" >
+                <img src="" alt="image 05" >
             </div>
 
         </section>
