--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             color: #fff;
             font-size: 55px;
             margin-left: 45px;
+            line-height: 45px;
         }
 
         .fotos-sobre-produto {
