Update add comentarios sections

--- a/index.html
+++ b/index.html
@@ -216,6 +216,13 @@
 
         <section id="sobre-projeto">
             <h2 id="titulo-sobre-projeto">Sobre o Projeto</h2>
+
+        </section>
+
+        <!--Comentários-->
+
+        <section id="comentarios">
+            
         </section>
 
         <footer>
