--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
             color: #fff;
             font-size: 50px;
             line-height: 45px;
+            margin-left: 25px;
         }
 
         .container-comentarios {
@@ -175,14 +176,16 @@
         }
 
         .box-comentario {
-            margin: 10px;
-            border: 1px solid green;
+            margin: 25px;
+            border: 3px solid green;
             display: flex;
             flex-direction: row;
             align-items: center;
             padding: 5px;
-            width: 50rem;
+            width: 45vw;
+            height: 4rem;
             border-radius: 10px;
+            background-color: #fff;
         }
 
         .comentario {
@@ -190,8 +193,8 @@
             font-optical-sizing: auto;
             font-weight: 400;
             font-style: normal;
-            font-size: 30px;
-            color: #fff;
+            font-size: 20px;
+            color: #000;
             margin-left: 15px;
         }
 
@@ -270,25 +273,34 @@
             <div id="container-comentarios">
 
             <div class="box-comentario">
-                <i id="icone-perfil" class="bi bi-person-circle" style="font-size: 30px; color: white;"></i>
+                <i id="icone-perfil" class="bi bi-person-circle" style="font-size: 30px; color: red;"></i>
                 <P class="comentario">Achei super legal, muito bom...</P>
             </div>
 
             <div class="box-comentario">
-                <i id="icone-perfil" class="bi bi-person-circle" style="font-size: 30px; color: white;"></i>
+                <i id="icone-perfil" class="bi bi-person-circle" style="font-size: 30px; color: blue;"></i>
                 <P class="comentario">Nossa, amei, chegou intacto...</P>
             </div>
 
             <div class="box-comentario">
-                <i id="icone-perfil" class="bi bi-person-circle" style="font-size: 30px; color: white;"></i>
+                <i id="icone-perfil" class="bi bi-person-circle" style="font-size: 30px; color: orange;"></i>
                 <P class="comentario">Super útil, ajudou muito no...</P>
             </div>
 
             <div class="box-comentario">
-                <i id="icone-perfil" class="bi bi-person-circle" style="font-size: 30px; color: white;"></i>
+                <i id="icone-perfil" class="bi bi-person-circle" style="font-size: 30px; color: darkgreen;"></i>
                 <P class="comentario">Achei super legal, muito bom...</P>
             </div>
 
+            <div class="box-comentario">
+                <i id="icone-perfil" class="bi bi-person-circle" style="font-size: 30px; color: gray;"></i>
+                <P class="comentario">top!</P>
+            </div>
+
+            </div>
+
+            <div id="big-comentário">
+                <i id="icone-perfil" class="bi bi-person-circle" style="font-size: 30px; color: gray;"></i>
             </div>
 
         </section>
