--- a/index.html
+++ b/index.html
@@ -375,6 +375,9 @@
             <div id="big-comentario">
                 <i id="icone-perfil" class="bi bi-person-circle" style="font-size: 30px; color: darkred;"></i>
                 <p id="nome-usuario">Marciele</p>
+                <p id="comentario-usuario">
+
+                </p>
                 <div class="estrelas">
                     <i class="bi bi-star-half" style="color: gold"></i>
                     <i class="bi bi-star" style="color: gold"></i>
@@ -403,8 +406,8 @@
         <script>
             function enviarComentario (o) {
                 let comment = document.querySelector('#user-comentario').value;
-                alert(comment)
-
+                console.log(comment);
+                let conteudo = document.querySelector('#comentario-usuario').value.innerHTML;
             }
         </script>
 
