--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
             function enviarComentario (o) {
                 let comment = document.querySelector('#user-comentario').value;
                 console.log(comment);
-                let conteudo = document.querySelector('#comentario-usuario').value.innerHTML; // revisar
+                let conteudo = document.querySelector('#comentario-usuario').value.innerHTML;
             }
         </script>
 
