--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
 
         #sobre-projeto {
             height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
         #titulo-sobre-projeto {
@@ -151,6 +153,36 @@
             font-size: 60px;
             line-height: 45px;
             text-align: center;
+        }
+
+        #timeline {
+            display: flex;
+            flex-direction: row;
+            height: 80vh;
+            justify-content: space-evenly;
+            align-items: center;
+            /* border: 1px solid white; */
+            position: relative; /* chatGPT */
+        }
+
+        #timeline::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            width: 75%;
+            height: 2px;
+            background-color: white;
+            z-index: -1; /* Fica atrás dos pontos */
+}
+
+        .pontos-importantes {
+            border: 1px solid white;
+            border-radius: 100%;
+            background-color: #1275e6;
+            height: 1.5rem;
+            width: 1.5rem;
+            margin: 10px;
+            position: relative; /* chatGPT */
         }
 
         /* Comentários */
@@ -329,6 +361,15 @@
 
         <section id="sobre-projeto">
             <h2 id="titulo-sobre-projeto">Sobre o Projeto</h2>
+
+            <div id="timeline">
+                <div class="pontos-importantes" id="ponto-1"></div>
+                <div class="pontos-importantes" id="ponto-2"></div>
+                <div class="pontos-importantes" id="ponto-3"></div>
+                <div class="pontos-importantes" id="ponto-4"></div>
+                <div class="pontos-importantes" id="ponto-5"></div>
+                <div class="pontos-importantes" id="ponto-6"></div>
+            </div>
 
         </section>
 
