--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         }
 
         header, main, #sobre-produto, #sobre-projeto, #comentarios, footer {
-            margin: 10px;
+            /* margin: 10px; */
             padding: 10px;
-            border: 1px solid white;
+            /* border: 1px solid white; */
         }
 
         /* Header */
