--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             align-items: center;
             background-image: url('src/image/image_background.jpg');
             background-size: cover;
+            filter: brightness(70%);
         }
 
         .texto-chamativo {
