header agora está estilizado em um arquivo externo
devido ao tamanho extenso do código, e o fato de que o header tera a msm configuração em todas as abas do site, decidi manter sua estilização em um arquivo externo, que pode ser encotrado em: "/src/css/header.css"

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet"> <!--jetBrains Mono-->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="src/css/header.css">
         <script src="src/js/modal.js"></script>
         <script src="src/js/whatsApp.js"></script>
         <title>AquaPulse 2057</title>
@@ -36,7 +37,7 @@
         }
 
         /* Header */
-        header {
+        /* header {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -71,7 +72,7 @@
         
         #icone-perfil:hover {
             color: green;
-        }
+        } */
 
         /* Main */
 
