--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: url('src/image/image_background.jpg');
-            background-size: cover;
-            filter: brightness(70%);
+            /* background-image: url('src/image/image_background.jpg'); */
+            /* background-size: cover; */
+            /* filter: brightness(70%); */
         }
 
         .texto-chamativo {
@@ -276,6 +276,8 @@
 
         <!--Header-->
 
+    <div id="header-main-background" style="background-image: url('src/image/image_background.jpg'); background-size: cover;">
+
         <header>
             <h1 id="titulo-principal">AquaPulse</h1>
             <div>
@@ -296,6 +298,8 @@
                 <p class="texto-chamativo" style="text-align: center; font-size: 30px;">Assista agora <a href="#"><i class="bi bi-play-circle" style="font-size: 30px;"></i></a></p>
             </div>
         </main>
+
+    </div>
 
         <!--Sobre o Produto-->
 
