--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         }
 
         /* Header */
+        /* <link rel="stylesheet" href="src/css/header.css"> */
 
         /* Main */
 
@@ -159,10 +160,10 @@
         }
 
         /* Comentários */
-
+        /* <link rel="stylesheet" href="src/css/comentarios.css"> */
 
         /* footer */
-
+        /* <link rel="stylesheet" href="src/css/footer.css"> */
 
         /* icons */
         /* <i class="bi bi-star"></i>  estrela*/
