--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="src/css/header.css">
         <link rel="stylesheet" href="src/css/footer.css">
         <link rel="stylesheet" href="src/css/comentarios.css">
-        <!-- <script src="src/js/modal.js"></script> -->
+        <script src="src/js/modal.js"></script>
         <script src="src/js/whatsApp.js"></script>
         <script src="src/js/pontosImportantes.js"></script>
         <title>AquaPulse 2057</title>
