--- a/index.html
+++ b/index.html
@@ -289,17 +289,53 @@
         <!-- footer -->
 
         <footer>
-            <p style="color: white"><a href="#" class="links-footer">Termos de uso</a> | <a href="#" class="links-footer">Políticas de Privacidade</a></p>
-            <div id="redes-sociais" style="margin: 10px;">
-                <a href="#"><i class="bi bi-google" style="color: green; margin: 5px;"></i></a>
-                <a href="#"><i class="bi bi-linkedin" style="color: green; margin: 5px;"></i></a>
-                <a href="#"><i class="bi bi-instagram" style="color: green; margin: 5px;"></i></a>
-                <a href="#"><i class="bi bi-github" style="color: green; margin: 5px;"></i></a>
-                <a href="#"><i class="bi bi-youtube" style="color: green; margin: 5px;"></i></a>
+             <footer style="background: linear-gradient(135deg, #1a1a1a, #2d2d2d); color: #fff; font-family: 'Arial', sans-serif; padding: 40px 20px;">
+        <div style="max-width: 1200px; margin: 0 auto; display: flex; flex-wrap: wrap; justify-content: space-between; align-items: flex-start;">
+            <div style="flex: 1 1 300px; text-align: center; margin-bottom: 20px;">
+                <img src="/src/image/logo fundo png simples.png" alt="Logo do Jogo" style="max-width: 100px; margin-bottom: 10px;">
             </div>
-            <p style="color: white;">
-                © 2024 AquaPulse. Todos os direitos reservados.
-            </p>
+            <div style="flex: 2 1 600px; display: flex; justify-content: space-between; margin-bottom: 20px;">
+                <div style="flex: 1; margin: 0 10px;">
+                    <h3 style="color: #98E630; margin-bottom: 10px; font-size: 18px; border-bottom: 2px solid #98E630; display: inline-block;">Explorar</h3>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Novos Sistemas</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Sustentabilidade em Campo</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Acessórios</a>
+                </div>
+                <div style="flex: 1; margin: 0 10px;">
+                    <h3 style="color: #98E630; margin-bottom: 10px; font-size: 18px; border-bottom: 2px solid #98E630; display: inline-block;">Suporte</h3>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Central de Ajuda</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Garantia</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Fale Conosco</a>
+                </div>
+                <div style="flex: 1; margin: 0 10px;">
+                    <h3 style="color: #98E630; margin-bottom: 10px; font-size: 18px; border-bottom: 2px solid #98E630; display: inline-block;">Comunidade</h3>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Fóruns</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Eventos</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Notícias</a>
+                </div>
+            </div>
+            <div style="flex: 1 1 300px; text-align: center; margin-bottom: 20px;">
+                <h3 style="font-size: 18px; color: #98E630; margin-bottom: 15px;">Siga-nos</h3>
+                <div style="display: flex; justify-content: center; gap: 15px;">
+                    <a href="#" style="width: 40px; height: 40px; background: #333; border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: background 0.3s ease, transform 0.3s ease;">
+                        <i class="bi bi-facebook" style="font-size: 20px; color: #fff;"></i>
+                    </a>
+                    <a href="#" style="width: 40px; height: 40px; background: #333; border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: background 0.3s ease, transform 0.3s ease;">
+                        <i class="bi bi-twitter" style="font-size: 20px; color: #fff;"></i>
+                    </a>
+                    <a href="#" style="width: 40px; height: 40px; background: #333; border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: background 0.3s ease, transform 0.3s ease;">
+                        <i class="bi bi-instagram" style="font-size: 20px; color: #fff;"></i>
+                    </a>
+                    <a href="#" style="width: 40px; height: 40px; background: #333; border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: background 0.3s ease, transform 0.3s ease;">
+                        <i class="bi bi-youtube" style="font-size: 20px; color: #fff;"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div style="text-align: center; border-top: 1px solid #98E630; padding-top: 15px; font-size: 14px; color: #ccc;">
+            <p>&copy; 2024 AquaPulse. Todos os direitos reservados.</p>
+        </div>
+    </footer>
         </footer>
 
         <script>
